fixed issue where anchors in the docs got cut off by fixed header

--- a/sass/circle/core/docs.sass
+++ b/sass/circle/core/docs.sass
@@ -52,6 +52,11 @@ $icon-font-path: "../../../icons/"
   &--article
     margin-bottom: 50px
     +clearfix
+    &:before
+      content: ""
+      display: block
+      height: 98px
+      margin: -98px 0 0
 
 .box
   padding: 15px
